# tfplan-parser

./: .gitignore  README.md  pyproject.toml
tests/: test_parser.py
tfplan_parser/: __init__.py  cli.py  parser.py
